update: swagger doc for the latest endpoints
